[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/tetris_game/TetrisPiece.gd" type="Script" id=1]
[ext_resource path="res://resources/scenes/tetris_game/objects/Block.tscn" type="PackedScene" id=2]

[node name="LPiece" type="Node2D"]
script = ExtResource( 1 )

[node name="Block1" parent="." instance=ExtResource( 2 )]

[node name="Block2" parent="." instance=ExtResource( 2 )]
position = Vector2( -20, 20 )

[node name="Block3" parent="." instance=ExtResource( 2 )]
position = Vector2( -20, 0 )

[node name="Block4" parent="." instance=ExtResource( 2 )]
position = Vector2( 20, 0 )
